config/base/webhook/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
    webhook: metal3-io-v1alpha1-baremetalhost
